syntax = "proto3";

message ProtoScillaVal 
{
	message Map 
    {
		map<string, ProtoScillaVal> m = 1;
	}

    oneof ValType 
    {
        bytes bval  = 1;
        Map mval    = 2;
    }
}

message ProtoScillaQuery 
{
    string name             = 1;
    bool is_mutable         = 2;
    uint32 mapdepth         = 3;
    repeated bytes indices  = 4;
    bool ignoreval          = 5;
}
